# alicat

./: .gitignore  .pre-commit-config.yaml  README.md  alicat.py  pyproject.toml  renovate.json  ruff.toml  serial.py  setup.cfg  setup.py
.github/: renovate.json
.github/workflows/: python-package.yml
alicat/: __init__.py  async.py  basis.py  driver.py  mock.py  serial.py  tcp.py  util.py
tests/: test_driver.py
